--- a/views/fail.ejs
+++ b/views/fail.ejs
@@ -5,9 +5,9 @@
     <body>
         <%- include("partials/nav") %>
 
-            <div class="success-message content">
-                <h1>Blog Created Successfully!</h1>
-                <p>Your blog has been created successfully. You can now view it on the blog list page.</p>
+            <div class="fail-message content">
+                <h1>Blog Created Failed</h1>
+                <p>There was an error for deteting your blog. Please try again.</p>
                 <a href="/blogs">Go to Blog List</a>
             </div>
 
