--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,10 +1,26 @@
 <nav>
-    <div class="site-title">
-        <a href="/"><h1>BlogPost</h1></a>
-    </div>
-    <ul>
-        <li><a href="/blogs">Blogs</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/newBlog">New Blog</a></li>
-    </ul>
+
+    <% if (user) { %>
+        <div class="site-title">
+            <a href="/">
+                <h1>BlogPost</h1>
+            </a>
+        </div>
+        <ul>
+            <li><a href="/blogs">Blogs</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/blogs/newBlog">New Blog</a></li>
+            <li><a href="../auth/login">Logout</a></li>
+        </ul>
+        <% } else { %>
+            <div class="site-title">
+                <a>
+                    <h1>BlogPost</h1>
+                </a>
+            </div>
+            <ul>
+                <li><a href="../auth/signup">Sign Up</a></li>
+                <li><a href="../auth/login">Login</a></li>
+            </ul>
+            <% } %>
 </nav>
