--- a/views/singleBlog.ejs
+++ b/views/singleBlog.ejs
@@ -11,11 +11,11 @@
                             <a class="back-link" href="/blogs" title="Go back to the blog list">
                                 <i>Go Back</i>
                             </a>
-                            <a href="/blogs/successDelete"><button id="delete-button" data-docid="<%= blog.id %>"
+                            <button id="delete-button" data-docid="<%= blog.id %>"
                                     title="Delete Blog">
                                     <i>Delete</i>
                                 </button>
-                            </a>
+                            
                         </div>
                 </h1>
                 <p class="blog-author">By <%= blog.author %> on <%= blog.updatedAt %>
