--- a/public/style.css
+++ b/public/style.css
@@ -437,7 +437,7 @@ article h3 {
     background: #c9302c;
 }
 
-
+/* Footer Style*/
 footer {
     background: #333;
     color: white;
@@ -446,4 +446,46 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    border-bottom: 3px solid rebeccapurple;
+}
+
+/* CSS for login signup */
+.form-container {
+    max-width: 400px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    text-align: center;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.form-group input {
+    width: 90%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+button {
+    width: 100%;
+    padding: 10px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #0056b3;
 }
