Cookie Delete When logout button click

--- a/views/auth/signupSuccess.ejs
+++ b/views/auth/signupSuccess.ejs
@@ -3,7 +3,7 @@
 <%- include("../partials/head") %>
 
     <body>
-        <%- include("../partials/navLogin") %>
+        <%- include("../partials/nav") %>
 
             <div class="success-message content">
                 <h1>Successfully! Signup <%= data.username %></h1>
